--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Personal Portfolio</title>
 </head>
 <body>
+    <header></header>
+    <main>
+        <section id="welcome-section">
+            
+        </section>
+    </main>
+    <footer></footer>
     
 </body>
 </html>
