Step 2. Added text to h1

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <header></header>
     <main>
         <section id="welcome-section">
-            
+            <h1>Hey I am Mimic</h1>
+            <h2>a web developer</h2>
         </section>
     </main>
     <footer></footer>
