--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             <h1>Hey I am Mimic</h1>
             <h2>a web developer</h2>
         </section>
+        <section id="projects">
+
+        </section>
     </main>
     <footer></footer>
     
