--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <h2>a web developer</h2>
         </section>
         <section id="projects">
+            <h3 class="project-tile">These are some of my projects</h3>
 
         </section>
     </main>
