--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
 <body>
     <header></header>
     <main>
-        <section id="welcome-section">
-            <h1>Hey I am Mimic</h1>
-            <h2>a web developer</h2>
-        </section>
-        <section id="projects">
-            <h3 class="project-tile">These are some of my projects</h3>
+      <section id="welcome-section">
+        <h1>Hey I am Mimic</h1>
+        <h2>a web developer</h2>
+      </section>
+      <section id="projects">
+        <h3 class="project-tile">These are some of my projects</h3>
+          <div>
+            <a href="https://codepen.io/freeCodeCamp/full/zNqgVx">Tribute Page</a>
+          </div>
 
-        </section>
+      </section>
     </main>
     <footer></footer>
     
