Step 7, 8. Added navbar and navigation

--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
     <title>Personal Portfolio</title>
 </head>
 <body>
-    <header></header>
+    <header>
+      <nav id="navbar">
+        <ul>
+          <li>
+            <a href="#welcome-section">About</a>
+          </li>
+          <li>
+            <a href="#projects">Work</a>
+          </li>
+          <li>
+            <a href="#contact">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
     <main>
       <section id="welcome-section">
         <h1>Hey I am Mimic</h1>
@@ -21,7 +35,7 @@
 
       </section>
     </main>
-    <footer></footer>
+    <footer id="contact"></footer>
     
 </body>
 </html>
