Step 8. Added id to link

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section id="projects">
         <h3 class="project-tile">These are some of my projects</h3>
           <div>
-            <a href="https://codepen.io/freeCodeCamp/full/zNqgVx">Tribute Page</a>
+            <a href="https://codepen.io/freeCodeCamp/full/zNqgVx" id="profile-link" target="_blank">Tribute Page</a>
           </div>
 
       </section>
