--- a/index.html
+++ b/index.html
@@ -30,7 +30,82 @@
       <section id="projects">
         <h3 class="project-tile">These are some of my projects</h3>
           <div>
-            <a href="https://codepen.io/freeCodeCamp/full/zNqgVx" id="profile-link" target="_blank">Tribute Page</a>
+            <a
+             href="https://codepen.io/freeCodeCamp/full/zNqgVx" 
+             id="profile-link" 
+             target="_blank">
+              <img
+               src="./images/tribute.jpg" 
+               alt="project" >
+              <p>
+               Tribute Page
+              </p>
+            </a>
+          </div>
+          <div>
+            <a
+             href="https://codepen.io/freeCodeCamp/full/qRZeGZ" 
+             id="profile-link" 
+             target="_blank">
+              <img
+               src="./images/random-quote-machine.png" 
+               alt="project">
+              <p>
+               Random Quote Machine
+              </p>
+            </a>
+          </div>
+          <div>
+            <a
+             href="https://codepen.io/freeCodeCamp/full/wgGVVX" 
+             id="profile-link" 
+             target="_blank">
+              <img
+               src="./images/calc.png" 
+               alt="project">
+              <p>
+               JavaScript Calculator
+              </p>
+            </a>
+          </div>
+          <div>
+            <a
+             href="https://codepen.io/freeCodeCamp/full/mVEJag" 
+             id="profile-link" 
+             target="_blank">
+              <img
+               src="./images/map.jpg" 
+               alt="project">
+              <p>
+                Map Data Across the Globe
+              </p>
+            </a>
+          </div>
+          <div>
+            <a
+             href="https://codepen.io/freeCodeCamp/full/wGqEga"
+             id="profile-link" 
+             target="_blank">
+              <img
+               src="./images/wiki.png" 
+               alt="project">
+              <p>
+                Wikipedia Viewer
+              </p>
+            </a>
+          </div>
+          <div>
+            <a
+             href="https://codepen.io/freeCodeCamp/full/KzXQgy" 
+             id="profile-link" 
+             target="_blank">
+              <img
+               src="./images/tic-tac-toe.png" 
+               alt="project">
+              <p>
+                Tic Tac Toe Game
+              </p>
+            </a>
           </div>
 
       </section>
