Added contact section

--- a/index.html
+++ b/index.html
@@ -109,8 +109,14 @@
           </div>
 
       </section>
+      <section id="contact">
+        <h4>Let's work together...</h4>
+      <p>How do you take your coffee?</p>
+      </section>
     </main>
-    <footer id="contact"></footer>
+    <footer >
+      
+    </footer>
     
 </body>
 </html>
