--- a/index.html
+++ b/index.html
@@ -115,6 +115,12 @@
       </section>
     </main>
     <footer >
+      <p>
+        **This is just a fake portfolio. All the projects and contact details given are not real.
+      </p>
+      <p>
+        © Created for freeCodeCamp
+      </p>
       
     </footer>
     
