--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="styles.css">
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-      integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
-      crossorigin="anonymous"
-    />
+    <script src="https://kit.fontawesome.com/782cf3142f.js" crossorigin="anonymous">
+    </script>
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&display=swap"
       rel="stylesheet"
@@ -125,8 +121,38 @@
 
       </section>
       <section id="contact">
-        <h4>Let's work together...</h4>
-      <p>How do you take your coffee?</p>
+        <h4>
+          Let's work together...
+        </h4>
+        <p>
+          How do you take your coffee?
+        </p>
+        <div class="contact-links">
+        <a
+          href="https://facebook.com/freecodecamp"
+          target="_blank"
+          class="btn contact-details"
+          ><i class="fab fa-facebook-square"></i> Facebook</a
+        >
+        <a
+          id="profile-link"
+          href="https://github.com/freecodecamp"
+          target="_blank"
+          class="btn contact-details"
+          ><i class="fab fa-github"></i> GitHub</a
+        >
+        <a
+          href="https://twitter.com/freecodecamp"
+          target="_blank"
+          class="btn contact-details"
+          ><i class="fab fa-twitter"></i> Twitter</a
+        >
+        <a href="/cdn-cgi/l/email-protection#93f6ebf2fee3fff6d3f6ebf2fee3fff6bdf0fcfe" class="btn contact-details"><i class="fas fa-at"></i> Send a mail</a
+        >
+        <a href="tel:555-555-5555" class="btn contact-details"
+          ><i class="fas fa-mobile-alt"></i> Call me</a
+        >
+        </div>
       </section>
     </main>
     <footer >
